macros/src/snapshots/event_handler__event_handler__tests__processor_2.snap
---
source: src/event_handler.rs
expression: formatted
---
pub struct EventEnvelope {
    pub event: Event,
    pub span: ::tracing::Span,
}
#[derive(Serialize, Deserialize, Clone)]
pub enum Event {
    EventNoFields,
}
impl std::fmt::Debug for Event {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            Event::EventNoFields => write!(f, stringify!(EventNoFields)),
            _ => write!(f, "Unknown Event"),
        }
    }
}
impl EventHandler {
    fn test_processor_2(
        &self,
        env: EventEnvelope,
        queue: &mut ::std::collections::VecDeque<EventEnvelope>,
    ) {
        let Event::EventNoFields = env.event else {
            unreachable!();
        };
        {
            println!("Hello world!");
        }
    }
    #[tracing::instrument(skip_all, parent = &env.span)]
    async fn handle(
        &self,
        env: EventEnvelope,
        queue: &mut ::std::collections::VecDeque<EventEnvelope>,
    ) {
        use Event::*;
        tracing::debug!("handle: {:?}", env.event);
        match env.event {
            Event::EventNoFields => self.test_processor_2(env, queue),
        }
    }
    async fn run(&self, mut rx: ::tokio::sync::mpsc::Receiver<EventEnvelope>) {
        let mut queue: ::std::collections::VecDeque<EventEnvelope> = ::std::collections::VecDeque::new();
        loop {
            match rx.recv().await {
                Some(envelope) => queue.push_back(envelope),
                None => {
                    tracing::error!("event channel closed unexpectedly");
                    break;
                }
            }
            while let Ok(envelope) = rx.try_recv() {
                queue.push_back(envelope);
            }
            while let Some(envelope) = queue.pop_front() {
                self.handle(envelope, &mut queue).await;
            }
        }
    }
}
