macros/src/snapshots/event_handler__event_handler__tests__processor_5.snap
---
source: src/event_handler.rs
expression: formatted
---
pub struct EventEnvelope {
    pub event: CustomEvent,
    pub span: ::tracing::Span,
}
#[derive(Serialize, Deserialize, Clone)]
pub enum CustomEvent {
    EventFields { value: u32, #[serde(skip)] arc: Option<Arc<Something>> },
}
impl std::fmt::Debug for CustomEvent {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        match self {
            CustomEvent::EventFields { .. } => write!(f, stringify!(EventFields)),
            _ => write!(f, "Unknown Event"),
        }
    }
}
impl EventHandler {
    fn test_processor_5(
        &self,
        env: EventEnvelope,
        queue: &mut ::std::collections::VecDeque<EventEnvelope>,
    ) {
        let CustomEvent::EventFields { value, arc } = env.event else {
            unreachable!();
        };
        {
            println!("Hello world!");
        }
    }
    #[tracing::instrument(skip_all, parent = &env.span)]
    async fn handle(
        &self,
        env: EventEnvelope,
        queue: &mut ::std::collections::VecDeque<EventEnvelope>,
    ) {
        use CustomEvent::*;
        tracing::debug!("handle: {:?}", env.event);
        match env.event {
            CustomEvent::EventFields { .. } => self.test_processor_5(env, queue),
        }
    }
    async fn run(&self, mut rx: ::tokio::sync::mpsc::Receiver<EventEnvelope>) {
        let mut queue: ::std::collections::VecDeque<EventEnvelope> = ::std::collections::VecDeque::new();
        loop {
            match rx.recv().await {
                Some(envelope) => queue.push_back(envelope),
                None => {
                    tracing::error!("event channel closed unexpectedly");
                    break;
                }
            }
            while let Ok(envelope) = rx.try_recv() {
                queue.push_back(envelope);
            }
            while let Some(envelope) = queue.pop_front() {
                self.handle(envelope, &mut queue).await;
            }
        }
    }
}
